cabal-version:      3.0
name:               stjerner
version:            0.1.0.0
license:            GPL-2.0-only
license-file:       LICENSE
author:             Kristian Nedrevold-Hansen
maintainer:         kristian@krined.no
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     
    Routes,
    StjernerService,
    Templates,
    StringUtils,
    HtmxSupport
  build-depends:
    base ^>=4.18.2.0,
    text,
    containers,
    scotty ^>=0.22,
    lucid2 ^>=0.0.20240424
  default-language: GHC2021

executable stjerner
  main-is:          Main.hs
  hs-source-dirs:   app 
  build-depends:
    base ^>=4.18.2.0,
    text,
    containers,
    scotty ^>=0.22,
    stjerner
  default-language: GHC2021

